<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_chart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <Button android:id="@+id/button_lastday"
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_margin="2dp"
                android:text="@string/statistics_button_lastday"
                android:background="@drawable/custom_button_top_left"/>

            <Button android:id="@+id/button_daily"
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_margin="2dp"
                android:text="@string/statistics_button_daily"
                android:background="@drawable/custom_button_top_right"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="0.5">

            <Button android:id="@+id/button_weekly"
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_margin="2dp"
                android:text="@string/statistics_button_weekly"
                android:background="@drawable/custom_button_bottom_left"/>

            <Button android:id="@+id/button_monthly"
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_margin="2dp"
                android:text="@string/statistics_button_monthly"
                android:background="@drawable/custom_button_bottom_right"/>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</LinearLayout>