<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout android:layout_height="350dp"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:text="@string/location_setting"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/primary_text_default_material_dark"/>

            <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/range_setting"
                android:textSize="14sp"
                android:textColor="@color/primary_text_default_material_dark"
                android:layout_gravity="center_vertical"/>

            <View android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="1"/>

            <EditText android:id="@+id/location_range"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/range_setting"
                android:singleLine="true"
                android:maxLength="4"
                android:inputType="numberSigned"/>

            <TextView android:id="@+id/measures"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/location_meter"/>

        </LinearLayout>

        <fragment
            android:id="@+id/google_map"
            android:layout_gravity="center_horizontal"
            android:layout_height="300dp"
            android:layout_width="300dp"
            android:name="com.google.android.gms.maps.MapFragment"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/alarm_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/custom_layout_selector">

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/alarm_setting"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/primary_text_default_material_dark"/>

        <View android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_weight="1"/>

        <TextView android:id="@+id/alarm_time"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/toggle1"/>

            <View android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="1"/>

            <Switch android:id="@+id/toggle_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/switch_inner"
                android:track="@drawable/switch_track"/>

        </LinearLayout>

        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/toggle2"/>

            <View android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="1"/>

            <Switch android:id="@+id/toggle_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/switch_inner"
                android:track="@drawable/switch_track"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
